@@ -111,25 +111,24 @@ REQUIREMENTS
   support also requires building kasetkey, which requires AFS and Kerberos
   v4 libraries.
 
-  To run the test suite, you must have the Perl modules Test::More,
-  IO::String, and DBI installed.  You will also need a DBD module
-  installed for the database backend you want to use (currently, either
-  DBD::SQLite or DBD::mysql).  Test::More comes with Perl 5.8 or later.
-  The other modules are available from CPAN and may be available as
-  part of your OS (many Linux distributions have them as packages, for
-  example).
+  To run the test suite, you must have Perl 5.8 or later and the Perl DBI
+  module installed.  You will also need a DBD module installed for the
+  database backend you want to use (currently, either DBD::SQLite or
+  DBD::mysql).  The other modules are available from CPAN and may be
+  available as part of your OS (many Linux distributions have them as
+  packages, for example).
 
   To run the full test suite, additionally all of the above software
   requirements must be met.  Tests requiring some bit of software that's
   not installed should be skipped, but not all the permutations have been
-  checked.  The test suite also requires Perl 5.8 or later, the Test::Pod
-  Perl module (available from CPAN), that remctld be installed and
-  available on the user's path or in /usr/local/sbin or /usr/sbin, that
-  test cases can run services on and connect to ports 14373 and 14444 on
-  127.0.0.1, and that kinit and kvno (which come with Kerberos) be
-  installed and available on the user's path.  The full test suite also
-  requires a local keytab, a srvtab with ADMIN access to a test AFS
-  kaserver, and some additional configuration.
+  checked.  The full test suite also requires the Test::Pod Perl module
+  (available from CPAN), that remctld be installed and available on the
+  user's path or in /usr/local/sbin or /usr/sbin, that test cases can run
+  services on and connect to ports 14373 and 14444 on 127.0.0.1, and that
+  kinit and kvno (which come with Kerberos) be installed and available on
+  the user's path.  The full test suite also requires a local keytab, a
+  srvtab with ADMIN access to a test AFS kaserver, and some additional
+  configuration.
 
   If you change the Automake files and need to regenerate Makefile.in, you
   will need Automake 1.10 or later.  If you change configure.ac or any of
