@@ -2,9 +2,6 @@
 
 Release 1.0:
 
-* Rewrite the server checks to avoid using IO::String, since one of the
-  tests already requires Perl 5.8's internal string handling.
-
 * Add POD coverage testing using Test::POD::Coverage for the server
   modules.
 
